Fix tests and z-index of datepicker.

--- a/app/assets/stylesheets/content/_in_place_editing.sass
+++ b/app/assets/stylesheets/content/_in_place_editing.sass
@@ -28,6 +28,9 @@ $inplace-edit--color--very-dark: #cacaca
 .ui-datepicker-close
   display: none
 
+#ui-datepicker-div
+  z-index: 9999 !important
+
 .inplace-edit--form
   display: block
   position: relative
